aptosid-art-legacy (2011.03.9) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 31 Jul 2012 01:22:49 +0200

aptosid-art-legacy (2011.03.8) unstable; urgency=low

  [ Rick Battle ]
  * s/ttf-dustin/fonts-dustin/ 

  [ Stefan Lippers-Hollmann ]
  * parallelize build system for void to the maximum.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 31 Jul 2012 01:22:06 +0200

aptosid-art-legacy (2011.03.7) unstable; urgency=low

  * fix dependencies for ksplash in KDE >= 4.7.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 27 Apr 2012 02:02:27 +0200

aptosid-art-legacy (2011.03.6) unstable; urgency=low

  * update dep-5 version to final 1.0, multiple changes necessary.
  * update second level copyrights.
  * drop obsolete second level debian/ directories.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 27 Feb 2012 22:52:47 +0100

aptosid-art-legacy (2011.03.5) unstable; urgency=low

  [ Niall Walsh ]
  * rework keres make_the_letters to be more parallel and unblock build-time

  [ Stefan Lippers-Hollmann ]
  * bump standards version to 3.9.3, no changes necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 23 Feb 2012 15:10:43 +0100

aptosid-art-legacy (2011.03.4) unstable; urgency=low

  * switch to compat level 9.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 15 Jan 2012 23:51:09 +0100

aptosid-art-legacy (2011.03.3) unstable; urgency=low

  * fix Ἡμέρα ksplash build.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 07 Jan 2012 00:59:56 +0100

aptosid-art-legacy (2011.03.2) unstable; urgency=low

  * fix file names.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 07 Jan 2012 00:16:55 +0100

aptosid-art-legacy (2011.03.1) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * use xz to compress source and binaries.
  * fix translation for άκυρος.
  * introduce initial step of build concurrency.

  [ Rick Battle ]
  * fred bump + added void text 
