@@ -9,7 +9,7 @@ Build-Depends: debhelper (>= 9.20120115),
  perl,
  perlmagick,
  libxml-parser-perl,
- ttf-dustin
+ fonts-dustin
 Standards-Version: 3.9.3
 Vcs-Svn: svn://svn.berlios.de/fullstory/aptosid-art-legacy/trunk
 Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/aptosid-art-legacy/trunk/
