@@ -2,6 +2,12 @@ aptosid-art-legacy (2011.03.9) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
 
+  [ Stefan Lippers-Hollmann ]
+  * s/ttf-dustin/fonts-dustin/ in the templates as well.
+
+  [ Roland Engert ]
+  parallelize build system for ponos to the maximum.
+
  -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 31 Jul 2012 01:22:49 +0200
 
 aptosid-art-legacy (2011.03.8) unstable; urgency=low
